# rust-rocket-web-service

./: .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
src/: main.rs
src/models/: post.rs
src/routes/: post.rs
