[package]
name = "rocket_web_service"
version = "0.1.0"
authors = ["Bernardo Leal <berleal98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
lazy_static = "1.3.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json", "diesel_postgres_pool"] }
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
